--- a/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
+++ b/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Author\AuthorFragment.cs" />
     <Compile Include="Views\Book\BookFragment.cs" />
+    <Compile Include="Views\Author\AddAuthorFragment.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmCross">
@@ -140,6 +141,18 @@
       <Generator></Generator>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\item_book.axml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\fragment_addauthor.axml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable\selector_btn_warning.xml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\drawable\selector_btn_primary.xml">
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
