Extend BL book, fix bug Update book, remove Delay, Add possibility to update a book, select first author if no book is present, show correct data in layout file, create detail fragment

--- a/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
+++ b/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Views\Author\AuthorDetailFragment.cs" />
     <Compile Include="Adapters\MenuTemplateSelector.cs" />
     <Compile Include="Views\Book\AddBookFragment.cs" />
+    <Compile Include="Views\Book\BookDetailFragment.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmCross">
