--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -16,6 +16,8 @@
     <Folder Include="Extensions\" />
     <Folder Include="BusinessLogic\" />
     <Folder Include="Services\Interfaces\" />
+    <Folder Include="ViewModels\Debug\" />
+    <Folder Include="Cells\Debug\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ThePage.Api\ThePage.Api.csproj" />
