--- a/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
+++ b/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Views\Book\AddBookFragment.cs" />
     <Compile Include="Views\Book\BookDetailFragment.cs" />
     <Compile Include="Services\UserInteraction.cs" />
+    <Compile Include="Views\Debug\DebugFragment.cs" />
+    <Compile Include="Adapters\DebugTemplateSelector.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmCross">
@@ -192,6 +194,18 @@
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\fragment_debug.axml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\cell_debug_header.axml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\cell_debug_item.axml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
@@ -233,6 +247,7 @@
     <Folder Include="Views\Book\" />
     <Folder Include="Adapters\" />
     <Folder Include="Services\" />
+    <Folder Include="Views\Debug\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
