--- a/ThePage/ThePage.Api/ThePage.Api.csproj
+++ b/ThePage/ThePage.Api/ThePage.Api.csproj
@@ -11,8 +11,10 @@
     <Folder Include="Managers\" />
     <Folder Include="Models\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Refit" Version="5.1.27" />
   </ItemGroup>
 </Project>
