--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -6,6 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="MvvmCross" Version="6.4.2" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AppCenter" Version="3.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\Author\" />
