Add API logic for Genre, Add Overview VM for Genres, add layout files, Add BL, Add CellGenre, update ThePageService

--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -21,6 +21,7 @@
     <Folder Include="Services\Interfaces\" />
     <Folder Include="ViewModels\Debug\" />
     <Folder Include="Cells\Debug\" />
+    <Folder Include="ViewModels\Genre\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ThePage.Api\ThePage.Api.csproj" />
