#16 add VM to add/view Genre, add fragments, add layout files, code cleanup, fix wrong name in BL Genre

--- a/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
+++ b/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Views\Debug\DebugFragment.cs" />
     <Compile Include="Adapters\DebugTemplateSelector.cs" />
     <Compile Include="Views\Genre\GenreFragment.cs" />
+    <Compile Include="Views\Genre\GenreDetailFragment.cs" />
+    <Compile Include="Views\Genre\AddGenreFragment.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmCross">
@@ -255,6 +257,14 @@
       <Generator></Generator>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\cell_genre_item.axml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\fragment_addgenre.axml">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\fragment_genredetail.axml">
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
