#21 Use Cells to show elemets in new book, create layout files, add adapter, update style, logic to add/remove genre, Add extension to Find index of observable collection, add extension to check list if null or empty

--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -22,6 +22,7 @@
     <Folder Include="ViewModels\Debug\" />
     <Folder Include="Cells\Debug\" />
     <Folder Include="ViewModels\Genre\" />
+    <Folder Include="Cells\Book\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ThePage.Api\ThePage.Api.csproj" />
