--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -16,7 +16,11 @@
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="MvvmCross.Tests" Version="6.4.3" />
   </ItemGroup>
-
+  <ItemGroup>
+  <None Update="xunit.runner.json"> 
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
+</ItemGroup>
   <ItemGroup>
     <Folder Include="BL\" />
   </ItemGroup>
