--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -1,27 +1,25 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-<PrivateAssets>all</PrivateAssets>
-</PackageReference>
-    <PackageReference Include="coverlet.collector" Version="1.2.0" />
-    <PackageReference Include="Moq" Version="4.13.1" />
-    <PackageReference Include="MvvmCross.Tests" Version="6.4.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="BL\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\ThePage.Api\ThePage.Api.csproj" />
-    <ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+		<PackageReference Include="xunit" Version="2.4.1" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="coverlet.collector" Version="1.2.0" />
+		<PackageReference Include="Moq" Version="4.13.1" />
+		<PackageReference Include="MvvmCross.Tests" Version="6.4.3" />
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="BL\" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\ThePage.Api\ThePage.Api.csproj" />
+		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
+	</ItemGroup>
 </Project>
