Activate linker for Release, fix reference to API

--- a/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
+++ b/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
@@ -49,6 +49,8 @@
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
     <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
     <EnableProguard>true</EnableProguard>
+    <AndroidLinkMode>Full</AndroidLinkMode>
+    <AndroidLinkSkip>ThePage.Core;ThePage.Api</AndroidLinkSkip>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android.Export" />
