#57 add Core converter, extra login in BL, add view only for switch and author, hide add genre in view-only

--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -28,6 +28,7 @@
     <Folder Include="Cells\Debug\" />
     <Folder Include="ViewModels\Genre\" />
     <Folder Include="Cells\Book\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThePage.Api\ThePage.Api.csproj" />
