#31 create baseViewModel tests, add genreVM, move Data logic to central factory, Mak Genre Refresh public,

--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -17,6 +17,10 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="BL\" />
+		<Folder Include="ViewModels\" />
+		<Folder Include="BL\Data\" />
+		<Folder Include="ViewModels\Genre\" />
+		<Folder Include="TestData\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
