#31 add AssemblyInfo for fix parallel exceptions, add test VM's, MockDispatcher, Genre Unit tests

--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -21,6 +21,9 @@
 		<Folder Include="BL\Data\" />
 		<Folder Include="ViewModels\Genre\" />
 		<Folder Include="TestData\" />
+		<Folder Include="Mock\" />
+		<Folder Include="Mock\ViewModel\" />
+		<Folder Include="ViewModels\Author\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
