#71 create Base cell for headers, add chevron drawables, create DrawableRight binding, Option to delete all test data

--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -29,6 +29,7 @@
     <Folder Include="ViewModels\Genre\" />
     <Folder Include="Cells\Book\" />
     <Folder Include="Converters\" />
+    <Folder Include="Cells\Base\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThePage.Api\ThePage.Api.csproj" />
