fix setup GenreDetail tests, add methods data factory genre, WIP addBookTests

--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -24,6 +24,8 @@
 		<Folder Include="Mock\" />
 		<Folder Include="Mock\ViewModel\" />
 		<Folder Include="ViewModels\Author\" />
+		<Folder Include="ViewModels\Book\" />
+		<Folder Include="TestData\Data\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
