#65 add animation, create base select ViewModels, rework genre select screen, add drawable files for star, check, author select, add unit tests for select genre

--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -30,6 +30,9 @@
     <Folder Include="Cells\Book\" />
     <Folder Include="Converters\" />
     <Folder Include="Cells\Base\" />
+    <Folder Include="Cells\Author\" />
+    <Folder Include="Cells\Genre\" />
+    <Folder Include="Utils\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThePage.Api\ThePage.Api.csproj" />
