#79 add unit tests for CellAuthorSelect, CellbookTextView, CellBookNumberTextView, CellBookTitle and CellGenreSelect, update code where necessary for better code

--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -26,6 +26,10 @@
 		<Folder Include="ViewModels\Author\" />
 		<Folder Include="ViewModels\Book\" />
 		<Folder Include="TestData\Data\" />
+		<Folder Include="Cells\" />
+		<Folder Include="Cells\Author\" />
+		<Folder Include="Cells\Genre\" />
+		<Folder Include="Cells\Book\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
