--- a/ThePage/src/ThePage.Api/ThePage.Api.csproj
+++ b/ThePage/src/ThePage.Api/ThePage.Api.csproj
@@ -12,6 +12,8 @@
     <Folder Include="Models\" />
     <Folder Include="Exceptions\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Models\Response\" />
+    <Folder Include="Models\Request\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
