#95 Add Login vm, add logic to login via api, add logic to refresh token, add authservice,

--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -33,6 +33,7 @@
     <Folder Include="Cells\Author\" />
     <Folder Include="Cells\Genre\" />
     <Folder Include="Utils\" />
+    <Folder Include="ViewModels\Authentication\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThePage.Api\ThePage.Api.csproj" />
