#95 add Unit tests for VM, show error message in case of incorrect username/password

--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -32,6 +32,7 @@
 		<Folder Include="Cells\Author\" />
 		<Folder Include="Cells\Genre\" />
 		<Folder Include="Cells\Book\" />
+		<Folder Include="ViewModels\Authentication\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
