--- a/ThePage/.editorconfig
+++ b/ThePage/.editorconfig
@@ -67,7 +67,7 @@ dotnet_style_predefined_type_for_member_access                      = true : war
 
 # Modifier preferences
 # https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference#normalize_modifiers
-dotnet_style_require_accessibility_modifiers                        = always : warning
+dotnet_style_require_accessibility_modifiers = always:none
 csharp_preferred_modifier_order                                     = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async : warning
 dotnet_style_readonly_field                                         = true : suggestion
 
@@ -345,3 +345,6 @@ dotnet_naming_rule.interface_types_must_be_prefixed_with_i.style                
 dotnet_naming_rule.suffix_method_with_async.severity                            = warning
 dotnet_naming_rule.suffix_method_with_async.symbols                             = async_method
 dotnet_naming_rule.suffix_method_with_async.style                               = suffix_method_with_async_style
+
+# IDE1006: Naming Styles
+dotnet_diagnostic.IDE1006.severity = none
