--- a/ThePage/src/ThePage.Api/ThePage.Api.csproj
+++ b/ThePage/src/ThePage.Api/ThePage.Api.csproj
@@ -14,6 +14,8 @@
     <Folder Include="Interfaces\" />
     <Folder Include="Models\Response\" />
     <Folder Include="Models\Request\" />
+    <Folder Include="Models\Response\Book\" />
+    <Folder Include="Utils\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
