--- a/ThePage/src/ThePage.Api/ThePage.Api.csproj
+++ b/ThePage/src/ThePage.Api/ThePage.Api.csproj
@@ -5,9 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Class1.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="Managers\" />
     <Folder Include="Models\" />
     <Folder Include="Exceptions\" />
@@ -16,6 +13,11 @@
     <Folder Include="Models\Request\" />
     <Folder Include="Models\Response\Book\" />
     <Folder Include="Utils\" />
+    <Folder Include="Models\Request\Authentication\" />
+    <Folder Include="Models\Response\Author\" />
+    <Folder Include="Models\Response\Genre\" />
+    <Folder Include="Models\Request\Author\" />
+    <Folder Include="Models\Request\Genre\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
