--- a/ThePage/src/ThePage.Api/ThePage.Api.csproj
+++ b/ThePage/src/ThePage.Api/ThePage.Api.csproj
@@ -18,6 +18,7 @@
     <Folder Include="Models\Response\Genre\" />
     <Folder Include="Models\Request\Author\" />
     <Folder Include="Models\Request\Genre\" />
+    <Folder Include="Models\Request\Book\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
