--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -35,6 +35,7 @@
     <Folder Include="Cells\Genre\" />
     <Folder Include="Utils\" />
     <Folder Include="ViewModels\Authentication\" />
+    <Folder Include="Utils\MvvmCross\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThePage.Api\ThePage.Api.csproj" />
