#121 code cleanup, add unit tests for BookShelfVM

--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -33,6 +33,7 @@
 		<Folder Include="Cells\Book\" />
 		<Folder Include="ViewModels\Authentication\" />
 		<Folder Include="BusinessLogic\" />
+		<Folder Include="ViewModels\BookShelf\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
