--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -37,6 +37,7 @@
     <Folder Include="ViewModels\Authentication\" />
     <Folder Include="Utils\MvvmCross\" />
     <Folder Include="ViewModels\BookShelf\" />
+    <Folder Include="Cells\BookShelf\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThePage.Api\ThePage.Api.csproj" />
