#121 add unit tests for Base Cells

--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -34,6 +34,7 @@
 		<Folder Include="ViewModels\Authentication\" />
 		<Folder Include="BusinessLogic\" />
 		<Folder Include="ViewModels\BookShelf\" />
+		<Folder Include="Cells\Base\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
